# PowerZooPy

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml  run_doc.sh
.github/workflows/: docs.yml
benchmarks/: __init__.py  throughput_python.py
docs/: hooks.py
docs/en/: getting-started.md  index.md
docs/javascripts/: mathjax.js
docs/stylesheets/: extra.css
docs/zh/: getting-started.md  index.md
examples/: 01_create_case.py  02_create_grid_and_resource.py  03_create_grid_and_register_resource.py  04_case33_result.txt  04_create_distgrid.py  05_distgrid_with_battery.py  06_compare_dist_pf_speed.py  07_compare_dist_pf_speed_pandapower.py  10_vehicle_demo.py  11_case123_3phase_zmatrix.py  15_data_loader_demo.py  16_auto_load_by_columns.py  18_resample_demo.py  19_OPF_demo.py  MARL01_opf.py  MARL02_opf_rllib.py  MARL03_opf_rllib_7days.py  MARL04_opf_task_GB.py  MARL04_opf_task_demo.py  MARL05_der_arbitrage_demo.py  MARL05_eval_only.py  MARL06_ev_v2g_demo.py  MARL07_opf_task_selected.py  RL01_continuous_simulation_trans.py  RL02_renewable_custom_profiles.py  RL03_opf_economic_dispatch.py  RL04_scenario_manager_demo.py  RL05_battery_control_basics.py  RL05_battery_control_sb3.py  RL05_battery_control_sb3_GB.py  RL06_battery_lmp_arbitrage.py  RL07_battery_dual_control_basics.py  RL07_battery_dual_control_sb3.py  SAFE01_cmdp_safe_rl.py  custom_marl.py  custom_reward.py  quickstart.py  sb3_trainer.py
examples/x04_plot_distgrid/: 04_1_distgrid_plot.py
examples/x04_plot_transgrid/: 04_1_transgrid_plot.py
examples/x05_plot_add_resource/: 05_1_plot_with_battery.py
examples/x06_compare_dist_pf_speed/: cal_pf_dist_old.py
examples/x11_IEEE123_Z_3ph/: IEEE123_Z_3ph.csv
examples/x13_compare_dist_3phase_speed/: __init__.py  cal_pf_dist_3phase_old_by_loop.py  compare_3phase_speed.py  profile_3phase_env.py
powerzoo/: __init__.py  registration.py
powerzoo/benchmarks/: __init__.py  baselines.json  compute.py  evaluation.py  scores.py
powerzoo/case/: CaseBase.py  CaseMocker.py  CasePlotter.py  __init__.py  _registry.py
powerzoo/data/: __init__.py  alignment.py  data_loader.py  dc_microgrid_profiles.py  manifest.py  registry.py  signals.py
powerzoo/envs/: __init__.py  base.py  factories.py  power_env.py
tests/: test_acopf_benchmark.py  test_case123_pf.py  test_case33bw_pf.py
(+312 files in other folders)
